I put both (release notes + forum announcement) into this source, so it will be easier to maintain them parallel:

APK 63 (0.7.16)  //Delivery

Release notes
=============
* New quest 'Delivery'
* Fix of Killed-by-Kamelio bug, postman bug and typos
* Translations actualized (Chinese 99%)


Forum announcement  //2022-02-20
==================
Hello fellow adventurers,

here is a new Andor's Trail release! 8-)

We have a new quest 'Delivery' made by Draze (actually his first - we will see more of him in coming releases. Thank you Draze for your hard work! :)).

Translations are actualized.
Chinese would be 100% now if we hadn't add the new quest - thanks to the translators!

And there are some fixes:
- postman fix
- Killed by Kamelio could block quest progress
- Some typos

Here is the link to the productive version: https://andorstrail.com/static/AndorsTrail_v0.7.16.apk

(Google Play will follow in a few days, unfortunately we still can't provide a version for F-droid)



APK 62 (0.7.15)  //just fixes+translations

Release notes
=============
* Fix of the notification crash bug
* Fix of missing scout and of a non disappearing Ortholion and Ehrenfest in certain conditions
* Various small changes and bug fixes
* Translations actualized


Forum announcement  //2021-12-18
==================
Hello fellow adventurers,

here is a new Andor's Trail release! 8-)

No, there is no new content - and also no christmas edition (awww...)

We publish this release mainly to fix some nasty bugs:
- Loot notifications could crash the game.
- A missing scout could prevent you from getting entry to the Elm mine.
- Non disappearing Ortholion and Ehrenfest in certain conditions are somewhat strange...

Beside that:
- Venom dagger gets poisonous
- Some more translations
- Other fixes of little bugs and typos

Here is the link to the productive version: https://andorstrail.com/static/AndorsTrail_v0.7.15.apk
