@@ -140,19 +140,19 @@
 	<string-array name="preferences_language">
 		<item>@string/preferences_language_default</item>
 		<item>English</item>
-		<item>čeština (62%)</item>
+		<item>čeština (62->77%)</item>
 		<item>Deutsch (91%)</item>
 		<item>Español (90%)</item>
-		<item>Française (86%)</item>
+		<item>Française (86->89%)</item>
 		<item>Italiano (90%)</item>
 		<item>Magyar (32%)</item>
 		<item>Polski (97%)</item>
 		<item>Português (83%)</item>
-		<item>Português Brasil (93%)</item>
-		<item>Русский язык (90%)</item>
-		<item>Türkçe (39%)</item>
-		<item>日本人 (91%)</item>
-		<item>中文 (68%)</item>
+		<item>Português Brasil (93->95%)</item>
+		<item>Русский язык (90->91%)</item>
+		<item>Türkçe (39->41%)</item>
+		<item>日本人 (91->100%)</item>
+		<item>中文 (68->100%)</item>
 	</string-array>
 
 	<!-- see AndorsTrailApplication.localeForLanguageTag for allowed formats -->
