@@ -4,7 +4,7 @@
 
 	<!-- Do not translate this. -->
 	<string name="about_copyright">Copyright © 2010–2013 Oskar Wiksten&lt;br /&gt;
-	    Copyright © 2013–2021 The Andor\'s Trail development team&lt;br /&gt;
+	    Copyright © 2013–2022 The Andor\'s Trail development team&lt;br /&gt;
 	    &lt;br /&gt;</string>
 	<string name="about_authors"><![CDATA[
 		<h4>Created &amp; originally programmed by Oskar Wiksten</h4>
@@ -19,6 +19,7 @@
 		• Christian Zink <b>*</b><br/>
 		• Daniel-Ømicrón Rodríguez García (Omicronrg9) <b>*</b><br/>
 		• Nathan Watson <b>*</b><br/>
+		• Draze <b>*</b><br/>
 		<b>*</b> Currently active on team<br/>
 		<br/>
 		<b>Development tools (Andor\'s Trail Content Studio) by</b><br/>
@@ -50,6 +51,7 @@
 		• Daniel-Ømicrón Rodríguez García (Omicronrg9)<br/>
 		• Moritz Arendt-Roth (Moerit)<br/>
 		• Antison<br/>
+		• Draze<br/>
 		<br/>
 		<b>Translations</b><br/>
 		• Russian translation by Dreamer..., e.solodookhin, shell.andor, konstmih, istasman, Aleksey Kabanov, Alexander Zubok, Paul Sulemenkov, dromoz, avatar232 and Mingun<br/>
@@ -74,6 +76,8 @@
 		• Indonesian translation by Frottle<br/>
 		• Catalan translation by David García Garzón (vokimon)<br/>
 		• Filipino translation by Elytra<br/>
+		<br/>
+		(If you miss your name here, please contact us)<br/>
 		<br/>
 		<b>Graphics</b><br/>
 		• <a href="http://pixeljoint.com/p/101133.htm">Original hero sprites by Maksiu</a><br/>
