@@ -8,6 +8,7 @@ Release notes
 * Fix of Killed-by-Kamelio bug, postman bug and typos
 * Translations actualized (Chinese 99%)
 
+I tried to follow up 
 
 Forum announcement  //2022-02-20
 ==================
@@ -18,7 +19,11 @@ here is a new Andor's Trail release! 8-)
 We have a new quest 'Delivery' made by Draze (actually his first - we will see more of him in coming releases. Thank you Draze for your hard work! :)).
 
 Translations are actualized.
-Chinese would be 100% now if we hadn't add the new quest - thanks to the translators!
+Chinese and Japanese would be 100% now, if we hadn't add the new quest.
+Thanks to all the translators!
+
+I once tried to keep track of who worked on the translations. However, this is a time-consuming work, so I gave up. If you think your name is missing in the credits, just contact us (e.g. in the forum, discord or via PM)
+
 
 And there are some fixes:
 - postman fix
